--- a/shop/templates/shop/register.html
+++ b/shop/templates/shop/register.html
@@ -1,7 +1,7 @@
 {% extends 'shop/layouts/main.html'%}
 {%block title%}
-Shopkart | index page
+Shopkart | Register page
 {%endblock title%}
 {% block content %}
-    <h1>Home PAge</h1>
+    <h1>Register PAge</h1>
 {% endblock content %}
