--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -3,5 +3,13 @@
 Shopkart | index page
 {%endblock title%}
 {% block content %}
-    <h1>Home PAge</h1>
+    <div class="container" style="margin-top: 70px;">
+        <div class="row">
+            <div class="col-12">
+                <h1>Home PAge</h1>
+            </div>
+        </div>
+        
+    </div>
+
 {% endblock content %}
