--- a/shop/templates/shop/register.html
+++ b/shop/templates/shop/register.html
@@ -3,5 +3,11 @@
 Shopkart | Register page
 {%endblock title%}
 {% block content %}
-    <h1>Register PAge</h1>
+    <div class="container" style="margin-top: 70px;">
+        <div class="row">
+            <div class="col-12">
+                <h1>Register PAge</h1>
+            </div>
+        </div>  
+    </div>
 {% endblock content %}
