--- a/shop/templates/shop/register.html
+++ b/shop/templates/shop/register.html
@@ -1,12 +1,12 @@
-{% extends 'shop/layouts/main.html'%}
-{%block title%}
+{% extends 'shop/layouts/main.html' %}
+{% block title %}
 Shopkart | Register page
-{%endblock title%}
+{% endblock title %}
 {% block content %}
     <div class="container" style="margin-top: 70px;">
         <div class="row">
             <div class="col-12">
-                <h1>Register PAge</h1>
+                <h1>Register Page</h1>
             </div>
         </div>  
     </div>
