--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -1,8 +1,9 @@
 {% extends 'shop/layouts/main.html'%}
 {%block title%}
-Shopkart | index page
+Shopkart | Online Shopping
 {%endblock title%}
 {% block content %}
+{% include 'shop/inc/slider.html' %}
     <div class="container" style="margin-top: 70px;">
         <div class="row">
             <div class="col-12">
