--- a/shop/templates/shop/inc/navbar.html
+++ b/shop/templates/shop/inc/navbar.html
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#">ShopKart</a>
+    <a class="navbar-brand" href="{% url 'home' %}">ShopKart</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse ml-auto" id="navbarNavAltMarkup">
       <div class="navbar-nav ms-auto">
-        <a class="nav-link active" href="#">Home <span class="sr-only"></span></a>
-        <a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link active" href="{% url 'home' %}">Home <span class="sr-only"></span></a>
+        <a class="nav-link" href="{% url 'register' %}">Register</a>
+        <a class="nav-link" href="{% url 'collections' %}">Collection</a>
         <a class="nav-link disabled">Disabled</a>
       </div>
     </div>
