--- a/shop/templates/shop/products/index.html
+++ b/shop/templates/shop/products/index.html
@@ -1,9 +1,11 @@
 {% extends 'shop/layouts/main.html'%}
+
 {%block title%}
 Shopkart | Online Shopping
 {%endblock title%}
+
 {% block content %}
-{% load static %}
+
 <section class="bg-light py-4 my-5">
     <div class="container">
         <div class="row">
@@ -13,14 +15,14 @@ Shopkart | Online Shopping
             </div>
             {% for item in products %}
             <div class="col-lg-3 col-md-4">
-                <div class="card my-3" style="border-radius: 25px;">
-                    <img style="height: 300px;border-top-left-radius: 25px; border-top-right-radius: 25px;" src="{{item.product_image.url}}" alt="Category Image" class="card-image-top">
+                <div class="card my-3">
+                    <img src="{{ item.product_image.url }}" alt="Category Image" class="card-image-top display">
                     <a href="#">
                         <div class="card-body">
                             <h5 class="card-title text-primary">{{item.name}}</h5>
                             <p class="card-text">
-                                <span class="float-start old_price"><s>Rs. {{item.original_price | stringformat:'d'}}</s></span>
-                                <span class="float-end new_price">{{item.selling_price | stringformat:'d'}}</span>
+                                <span class="old-price float-start"><s>Rs. {{item.original_price | stringformat:'d'}}</s></span>
+                                <span class="new-price float-end ">{{item.selling_price | stringformat:'d'}}</span>
                             </p>
                         </div>
                     </a>
