--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,13 +19,21 @@ a{
     overflow: hidden;
 }
 
-.old_price{
+.old-price{
     font-weight: bold;
     color: red;
 }
 
-.new_price{
+.new-price{
     font-weight: bold;
     background-color: green;
     color: white;
+    padding: 2px;
+    border-radius: 5px;
+}
+
+.display{
+    max-width: 100%;
+    height: 300px;
+    display: block;
 }
