--- a/shop/templates/shop/layouts/main.html
+++ b/shop/templates/shop/layouts/main.html
@@ -9,6 +9,7 @@
       {%block title%}
       {%endblock title%}
     </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
   </head>
   <body>
@@ -18,6 +19,7 @@
     
     {% block scripts %}
     {% endblock scripts %}
+    {% include 'shop/inc/footer.html'%}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
