--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,7 @@ a{
 .carousel-item img{
     object-fit: cover;
     object-position: top;
-    height: 60vh;
+    height: 80vh;
     overflow: hidden;
 }
 
@@ -31,9 +31,40 @@ a{
     padding: 2px;
     border-radius: 5px;
 }
-
+.dis-img{
+    display: flex;
+    justify-content: center;
+}
 .display{
     max-width: 100%;
     height: 300px;
+    /* display: flex;
+    justify-content: center; */
+}
+
+.pic-box {
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
+
+.pic-img{
+
+    width: 100%;
+}
+
+  
+.hot {
+    background-color: orangered;
+    color: white;
+    width: 70px;
+    text-align: center;
+    font-weight: bold;
     display: block;
+    border-radius: 5px;
+    padding: 5px;
+    position: absolute;
+    top: 0;
+    right: 20px;
+    z-index: 10;
 }
