--- a/shop/templates/shop/inc/navbar.html
+++ b/shop/templates/shop/inc/navbar.html
@@ -6,11 +6,17 @@
     </button>
     <div class="collapse navbar-collapse ml-auto" id="navbarNavAltMarkup">
       <div class="navbar-nav ms-auto">
-        <a class="nav-link active" href="{% url 'home' %}"><i class="fa fa-home"></i>Home <span class="sr-only"></span></a>
-        <a class="nav-link" href="{% url 'register' %}"><i class="fa fa-user"></i>Register</a>
-        <a class="nav-link" href="{% url 'collections' %}"><i class="fa fa-cubes"></i>Collection</a>
-        <a class="nav-link" href="#"><i class="fa fa-shopping-cart"></i>Cart</a>
-        <a class="nav-link disabled">Disabled</a>
+        <a class="nav-link" aria-current="page" href="{% url 'home' %}"><i class="fa fa-home"></i> Home</a>
+        {% if request.user.is_authenticated %}
+          <a class="nav-link" aria-current="page" href="#"><i class="fa fa-user"></i> {{request.user}}</a>
+          <a class="nav-link" aria-current="page" href="{% url 'logout' %}"><i class="fa fa-sign-out"></i> Logout</a>
+        {% else %}
+          <a class="nav-link" href="{% url 'login' %}"><i class="fa fa-sign-in"></i> Login</a>
+          <a class="nav-link" href="{% url 'register' %}"><i class="fa fa-users"></i> Register</a>
+        {% endif %}
+          <a class="nav-link" href="{% url 'collections' %}"><i class="fa fa-cubes"></i> Collections</a>
+          <a class="nav-link" href="#"><i class="fa fa-shopping-cart"></i> Cart</a>
+          <a class="nav-link" href="#"><i class="fa fa-heart"></i> Favourite</a>
       </div>
     </div>
   </div>
