--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -7,7 +7,8 @@ Shopkart | Online Shopping
     <div class="container" style="margin-top: 70px;">
         <div class="row">
             <div class="col-12">
-                <h1>Latest Offers</h1>
+                <h4 class="mb-3">Latest Offers</h4>
+                <hr style="border-color:#b8bfc2;">
             </div>
             {% for item in products %}
                 <div class="col-lg-3 col-md-4">
