--- a/shop/templates/shop/products/product_details.html
+++ b/shop/templates/shop/products/product_details.html
@@ -92,7 +92,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
             'pid': pid.value
         }
         //console.log(postObj);
-        fetch("/addtocart",{
+        fetch("/addtocart/",{
           method: 'POST',
           credentials: 'same-origin',
           headers:{
