--- a/shop/templates/shop/inc/navbar.html
+++ b/shop/templates/shop/inc/navbar.html
@@ -15,8 +15,8 @@
           <a class="nav-link" href="{% url 'register' %}"><i class="fa fa-users"></i> Register</a>
         {% endif %}
           <a class="nav-link" href="{% url 'collections' %}"><i class="fa fa-cubes"></i> Collections</a>
-          <a class="nav-link" href="#"><i class="fa fa-shopping-cart"></i> Cart</a>
-          <a class="nav-link" href="#"><i class="fa fa-heart"></i> Favourite</a>
+          <a class="nav-link" href="{% url 'cart' %}"><i class="fa fa-shopping-cart"></i> Cart</a>
+          <a class="nav-link" href="{% url 'favviewpage' %}"><i class="fa fa-heart"></i> Favourite</a>
       </div>
     </div>
   </div>
