--- a/shop/templates/shop/inc/footer.html
+++ b/shop/templates/shop/inc/footer.html
@@ -19,7 +19,7 @@
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
             <h6 class="text-uppercase fw-bold mb-4"><i class="fa fa-cart-plus"></i> ShopKart</h6>
             <p>
-              shopkart.com is a one stop destination for your family's fashion needs.
+              shopkart.com is a one stop destination for your family's fashion needs and grocery needs.
                We give you the opportunity to give your wardrobe a makeover with the latest collections from our top brands.
             </p>
           </div>
@@ -41,15 +41,15 @@
           
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <h6 class="text-uppercase fw-bold mb-4"> Contact</h6>
-            <p><i class="fa fa-home"></i> Palani Selvam </p>
-            <p><i class="fa fa-envelope"></i> palaniselvamsarathy@gmail.com</p>
-            <p><i class="fa fa-phone"></i> + 91 8825647564</p>
+            <p><i class="fa fa-home"></i> ShopKart </p>
+            <p><i class="fa fa-envelope"></i> shopkart@gmail.com</p>
+            <p><i class="fa fa-phone"></i> + 91 XXXXX-X7564</p>
           </div>
   
         </div>
       </div>
     </section>
     <div class="text-center p-4">
-      &copy;  2024 Copyright <a class="text-reset fw-bold" href="#">Palani Selvam</a>
+      &copy;  2024 Copyright <a class="text-reset fw-bold" href="#">ShopKart</a>
     </div>
   </footer>
