--- a/shop/templates/shop/inc/slider.html
+++ b/shop/templates/shop/inc/slider.html
@@ -6,19 +6,23 @@
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="{% static 'images/4.jpg' %}" class="d-block w-100" alt="Slide 1">
     </div>
     <div class="carousel-item">
-      <img src="{% static 'images/3.jpg' %}" class="d-block w-100" alt="Slide 2">
+      <img src="{% static 'images/5.jpg' %}" class="d-block w-100" alt="Slide 2">
     </div>
     <div class="carousel-item">
-      <img src="{% static 'images/5.jpg' %}" class="d-block w-100" alt="Slide 3">
+      <img src="{% static 'images/3.jpg' %}" class="d-block w-100" alt="Slide 3">
     </div>
     <div class="carousel-item">
-      <img src="{% static 'images/2.jpg' %}" class="d-block w-100" alt="Slide 4">
+      <img src="{% static 'images/1.jpg' %}" class="d-block w-100" alt="Slide 4">
+    </div>
+    <div class="carousel-item">
+      <img src="{% static 'images/2.jpg' %}" class="d-block w-100" alt="Slide 5">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
